tests/fail/semantics/missing_struct_literal_field/main.kira
struct Point {
    let x: Int
    let y: Int = 0
}

@Main
function entry() {
    let point = Point { y: 2 }
    print(point.y)
    return
}
